# Analytica

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-test.txt  requirements.txt  start_all.sh  test_desc_analysis.py
.backups/: analytica_20260425_130036.sql
backend/: config.py  database.py  demo_perception.py  exceptions.py  main.py  timeout_config.py  tracing.py
data/: api_registry.json  endpoint_health.json
employees/: asset_investment.yaml  customer_insight.yaml  throughput_analyst.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
migrations/: env.py
mock_server/: DISCREPANCY_REPORT.json  DISCREPANCY_REPORT_FINAL.json  DISCREPANCY_REPORT_FULL.json  DISCREPANCY_REPORT_P0_VERIFY.json  DISCREPANCY_REPORT_P1_v1.json  _transform_handlers.py  api_validation_report_20260415_184058.json  comparison_from_dump.json  field_mapping.json  main.py  mock_server_all.py  prod_api_validator.py  prod_mock_align_check.py  utils.py  validation_from_dump.json
reports/: phase1_test_report.md  phase2_test_coverage_analysis.md  phase2_test_coverage_summary.txt  phase2_test_report.md  phase3_test_report.md  phase4_test_report.md  phase5_test_report.md  three_phase_test_report.md
spec/: Analytica_PRD.md  Phase0_模拟数据环境.md  Phase1_脚手架与感知层.md  Phase2_规划层与状态机.md  Phase3_执行层与技能库.md  Phase4_反思层与记忆系统.md  Phase5_前端UI与集成测试.md  auth_rbac_sso_design.md  chart_capability_matrix.md  liangang_journal_design_plan.md  optimize_multiround_planning.md  optimize_multiround_planning_implementation.md  optimize_multiturn_conversation.md  optimize_multiturn_conversation_session_plan.md  optimize_report_gen_timeout.md  optimize_report_gen_timeout_impl.md  optimize_report_quality_V1.md  optimize_report_quality_V1_batch_A_data_authenticity.md  optimize_report_quality_V1_batch_B_section_matching.md  optimize_report_quality_V1_batch_C_pptx_render.md  optimize_report_quality_V1_batch_D1_cross_domain_foundation.md  optimize_report_quality_V1_batch_D2_content_deepening.md  optimize_web_search.md  refactor_complexity_boundary.md  refactor_config_layer.md  refactor_employees_db.md  refactor_kill_feature_flags.md  refactor_report_outline.md  tool_anomaly_design.md  visual_compatibility_matrix.md  visual_polish_plan.md
specs/: fix-task-failures.md
tests/: artifact_recorder.py  conftest.py  generate_report.py  generate_report_phase2.py  generate_sample_reports.py  mock_llm_responses.py  test_agent_mock_e2e.py  test_detailed_e2e.py  test_employee_e2e.py  test_execution_only.py  test_json_template_execution.py  test_json_template_execution_by_mock_llm.py  test_report_gen.py
tools/: endpoint_health_audit.py  export_api_registry.py  field_schema_snippets.txt  (+4 more)
(+1147 files in other folders)
