[project]
name = "analytica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "matplotlib>=3.7",
    "pandas>=3.0.2",
    "pydantic-settings>=2.0",
    "pymysql>=1.1.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.23.1",
]
# Optional deps for the perceptual-hash visual regression suite
# (tests/visual/). Also requires LibreOffice + poppler-utils on PATH.
# Install with: `uv sync --group visual`
visual = [
    "Pillow>=10.0",
    "imagehash>=4.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
# Default deselects:
#   - scenario: business-specific paths (run on demand / pre-release)
#   - llm_real: hits real LLM API (run nightly / manual)
#   - slow:    > 5s
addopts = "-m 'not scenario and not llm_real and not slow'"
markers = [
    "contract: schema/registry/config invariants — must pass on every PR",
    "health: per-layer minimal sanity check",
    "smoke: full-chain canonical path, mock LLM, mock server",
    "probe: external surface health checks (mock_server routes, TS build)",
    "scenario: business-specific (NOT in regression suite — run with -m scenario)",
    "slow: > 5s — opt-in via -m slow",
    "llm_real: hits real LLM API — opt-in via -m llm_real",
    "integration: deprecated, kept for back-compat with legacy tests",
]
